# gtest-ci

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
src/: CMakeLists.txt  example.cpp
test/: CMakeLists.txt  example_add.cpp
